package com.example.demo.api;

/**
 * Constantes reutilizables de rutas/paths para evitar duplicación (DRY).
 */
public final class ApiConstants {
    private ApiConstants() {}

    public static final String API_BASE = "/api";
}
